versions/0.9.0/_sources/refs/_aws-cdk_aws-codedeploy.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"0iJ8cKJvWud4jrrga3ASq2MMG1ozQUD6xn584ZyO2SI="}

@aws-cdk/aws-codedeploy
=======================

.. tabs::

   .. group-tab:: C#

      View in `Nuget <https://www.nuget.org/packages/Amazon.CDK.AWS.CodeDeploy/0.9.0>`_

      **csproj**:

      .. code-block:: xml

         <PackageReference Include="Amazon.CDK.AWS.CodeDeploy" Version="0.9.0" />

      **dotnet**:

      .. code-block:: console

         dotnet add package Amazon.CDK.AWS.CodeDeploy --version 0.9.0

      **packages.config**:

      .. code-block:: xml

         <package id="Amazon.CDK.AWS.CodeDeploy" version="0.9.0" />


   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/codedeploy/0.9.0/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:codedeploy:jar:0.9.0'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="codedeploy" rev="0.9.0"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>codedeploy</artifactId>
           <version>0.9.0</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:codedeploy:0.9.0'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='codedeploy', version='0.9.0')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-codedeploy/v/0.9.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-codedeploy@0.9.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-codedeploy": "^0.9.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-codedeploy@0.9.0


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-codedeploy/v/0.9.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-codedeploy@0.9.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-codedeploy": "^0.9.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-codedeploy@0.9.0



.. mdinclude:: ./__aws-cdk_aws-codedeploy.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-codedeploy

ApplicationArn
^^^^^^^^^^^^^^

.. py:class:: ApplicationArn(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CodeDeploy;

      .. code-tab:: java

         import software.amazon.awscdk.services.codedeploy.ApplicationArn;

      .. code-tab:: javascript

         const { ApplicationArn } = require('@aws-cdk/aws-codedeploy');

      .. code-tab:: typescript

         import { ApplicationArn } from '@aws-cdk/aws-codedeploy';



   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

ApplicationName
^^^^^^^^^^^^^^^

.. py:class:: ApplicationName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CodeDeploy;

      .. code-tab:: java

         import software.amazon.awscdk.services.codedeploy.ApplicationName;

      .. code-tab:: javascript

         const { ApplicationName } = require('@aws-cdk/aws-codedeploy');

      .. code-tab:: typescript

         import { ApplicationName } from '@aws-cdk/aws-codedeploy';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

DeploymentConfigId
^^^^^^^^^^^^^^^^^^

.. py:class:: DeploymentConfigId(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CodeDeploy;

      .. code-tab:: java

         import software.amazon.awscdk.services.codedeploy.DeploymentConfigId;

      .. code-tab:: javascript

         const { DeploymentConfigId } = require('@aws-cdk/aws-codedeploy');

      .. code-tab:: typescript

         import { DeploymentConfigId } from '@aws-cdk/aws-codedeploy';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

DeploymentGroupArn
^^^^^^^^^^^^^^^^^^

.. py:class:: DeploymentGroupArn(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CodeDeploy;

      .. code-tab:: java

         import software.amazon.awscdk.services.codedeploy.DeploymentGroupArn;

      .. code-tab:: javascript

         const { DeploymentGroupArn } = require('@aws-cdk/aws-codedeploy');

      .. code-tab:: typescript

         import { DeploymentGroupArn } from '@aws-cdk/aws-codedeploy';



   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

DeploymentGroupName
^^^^^^^^^^^^^^^^^^^

.. py:class:: DeploymentGroupName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CodeDeploy;

      .. code-tab:: java

         import software.amazon.awscdk.services.codedeploy.DeploymentGroupName;

      .. code-tab:: javascript

         const { DeploymentGroupName } = require('@aws-cdk/aws-codedeploy');

      .. code-tab:: typescript

         import { DeploymentGroupName } from '@aws-cdk/aws-codedeploy';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

PipelineDeployAction
^^^^^^^^^^^^^^^^^^^^

.. py:class:: PipelineDeployAction(parent, id, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CodeDeploy;

      .. code-tab:: java

         import software.amazon.awscdk.services.codedeploy.PipelineDeployAction;

      .. code-tab:: javascript

         const { PipelineDeployAction } = require('@aws-cdk/aws-codedeploy');

      .. code-tab:: typescript

         import { PipelineDeployAction } from '@aws-cdk/aws-codedeploy';



   :extends: :py:class:`@aws-cdk/aws-codepipeline-api.DeployAction`
   :param parent: 
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param id: 
   :type id: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-codedeploy.PipelineDeployActionProps`

PipelineDeployActionProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: PipelineDeployActionProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CodeDeploy;

      .. code-tab:: java

         import software.amazon.awscdk.services.codedeploy.PipelineDeployActionProps;

      .. code-tab:: javascript

         // PipelineDeployActionProps is an interface

      .. code-tab:: typescript

         import { PipelineDeployActionProps } from '@aws-cdk/aws-codedeploy';



   Construction properties of the {@link PipelineDeployAction CodeDeploy deploy CodePipeline Action}.


   :extends: :py:class:`@aws-cdk/aws-codepipeline-api.CommonActionProps`


   .. py:attribute:: applicationName

      The name of the CodeDeploy application to deploy to.


      :type: string


   .. py:attribute:: deploymentGroupName

      The name of the CodeDeploy deployment group to deploy to.


      :type: string


   .. py:attribute:: inputArtifact

      The source to use as input for deployment.


      :type: :py:class:`@aws-cdk/aws-codepipeline-api.Artifact`


ServerApplication
^^^^^^^^^^^^^^^^^

.. py:class:: ServerApplication(parent, id, [props])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CodeDeploy;

      .. code-tab:: java

         import software.amazon.awscdk.services.codedeploy.ServerApplication;

      .. code-tab:: javascript

         const { ServerApplication } = require('@aws-cdk/aws-codedeploy');

      .. code-tab:: typescript

         import { ServerApplication } from '@aws-cdk/aws-codedeploy';



   A CodeDeploy Application that deploys to EC2/on-premise instances.


   :extends: :py:class:`~@aws-cdk/aws-codedeploy.ServerApplicationRef`
   :param parent: 
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param id: 
   :type id: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-codedeploy.ServerApplicationProps` or undefined

   .. py:attribute:: applicationArn

      :type: :py:class:`~@aws-cdk/aws-codedeploy.ApplicationArn` *(readonly)*


   .. py:attribute:: applicationName

      :type: :py:class:`~@aws-cdk/aws-codedeploy.ApplicationName` *(readonly)*


ServerApplicationProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: ServerApplicationProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CodeDeploy;

      .. code-tab:: java

         import software.amazon.awscdk.services.codedeploy.ServerApplicationProps;

      .. code-tab:: javascript

         // ServerApplicationProps is an interface

      .. code-tab:: typescript

         import { ServerApplicationProps } from '@aws-cdk/aws-codedeploy';



   Construction properties for {@link ServerApplication}.




   .. py:attribute:: applicationName

      The physical, human-readable name of the CodeDeploy Application.


      :type: string or undefined


ServerApplicationRef
^^^^^^^^^^^^^^^^^^^^

.. py:class:: ServerApplicationRef(parent, id)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CodeDeploy;

      .. code-tab:: java

         import software.amazon.awscdk.services.codedeploy.ServerApplicationRef;

      .. code-tab:: javascript

         const { ServerApplicationRef } = require('@aws-cdk/aws-codedeploy');

      .. code-tab:: typescript

         import { ServerApplicationRef } from '@aws-cdk/aws-codedeploy';



   Represents a reference to a CodeDeploy Application deploying to EC2/on-premise instances.  If you're managing the Application alongside the rest of your CDK resources, use the {@link ServerApplication} class.  If you want to reference an already existing Application, or one defined in a different CDK Stack, use the {@link #import} method.


   :extends: :py:class:`@aws-cdk/cdk.Construct`
   :abstract: Yes
   :param parent: The parent construct
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param id: 
   :type id: string

   .. py:staticmethod:: import(parent, id, props) -> @aws-cdk/aws-codedeploy.ServerApplicationRef

      Import an Application defined either outside the CDK, or in a different CDK Stack and exported using the {@link #export} method.


      :param parent: the parent Construct for this new Construct
      :type parent: :py:class:`@aws-cdk/cdk.Construct`
      :param id: the logical ID of this new Construct
      :type id: string
      :param props: the properties of the referenced Application
      :type props: :py:class:`~@aws-cdk/aws-codedeploy.ServerApplicationRefProps`
      :return: a Construct representing a reference to an existing Application
      :rtype: :py:class:`~@aws-cdk/aws-codedeploy.ServerApplicationRef`


   .. py:method:: export() -> @aws-cdk/aws-codedeploy.ServerApplicationRefProps

      :rtype: :py:class:`~@aws-cdk/aws-codedeploy.ServerApplicationRefProps`


   .. py:attribute:: applicationArn

      :type: :py:class:`~@aws-cdk/aws-codedeploy.ApplicationArn` *(readonly)* *(abstract)*


   .. py:attribute:: applicationName

      :type: :py:class:`~@aws-cdk/aws-codedeploy.ApplicationName` *(readonly)* *(abstract)*


ServerApplicationRefProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: ServerApplicationRefProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CodeDeploy;

      .. code-tab:: java

         import software.amazon.awscdk.services.codedeploy.ServerApplicationRefProps;

      .. code-tab:: javascript

         // ServerApplicationRefProps is an interface

      .. code-tab:: typescript

         import { ServerApplicationRefProps } from '@aws-cdk/aws-codedeploy';



   Properties of a reference to a CodeDeploy EC2/on-premise Application.




   .. py:attribute:: applicationName

      The physical, human-readable name of the CodeDeploy EC2/on-premise Application we're referencing. The Application must be in the same account and region as the root Stack.


      :type: :py:class:`~@aws-cdk/aws-codedeploy.ApplicationName`


ServerDeploymentGroup
^^^^^^^^^^^^^^^^^^^^^

.. py:class:: ServerDeploymentGroup(parent, id, [props])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CodeDeploy;

      .. code-tab:: java

         import software.amazon.awscdk.services.codedeploy.ServerDeploymentGroup;

      .. code-tab:: javascript

         const { ServerDeploymentGroup } = require('@aws-cdk/aws-codedeploy');

      .. code-tab:: typescript

         import { ServerDeploymentGroup } from '@aws-cdk/aws-codedeploy';



   A CodeDeploy Deployment Group that deploys to EC2/on-premise instances.


   :extends: :py:class:`~@aws-cdk/aws-codedeploy.ServerDeploymentGroupRef`
   :param parent: 
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param id: 
   :type id: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-codedeploy.ServerDeploymentGroupProps` or undefined

   .. py:attribute:: application

      :type: :py:class:`~@aws-cdk/aws-codedeploy.ServerApplicationRef` *(readonly)*


   .. py:attribute:: deploymentGroupArn

      :type: :py:class:`~@aws-cdk/aws-codedeploy.DeploymentGroupArn` *(readonly)*


   .. py:attribute:: deploymentGroupName

      :type: :py:class:`~@aws-cdk/aws-codedeploy.DeploymentGroupName` *(readonly)*


   .. py:attribute:: role

      :type: :py:class:`@aws-cdk/aws-iam.Role` *(readonly)*


ServerDeploymentGroupProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: ServerDeploymentGroupProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CodeDeploy;

      .. code-tab:: java

         import software.amazon.awscdk.services.codedeploy.ServerDeploymentGroupProps;

      .. code-tab:: javascript

         // ServerDeploymentGroupProps is an interface

      .. code-tab:: typescript

         import { ServerDeploymentGroupProps } from '@aws-cdk/aws-codedeploy';



   Construction properties for {@link ServerDeploymentGroup}.




   .. py:attribute:: application

      The CodeDeploy EC2/on-premise Application this Deployment Group belongs to. If you don't provide one, a new Application will be created.


      :type: :py:class:`~@aws-cdk/aws-codedeploy.ServerApplicationRef` or undefined


   .. py:attribute:: deploymentGroupName

      The physical, human-readable name of the CodeDeploy Deployment Group.


      :type: string or undefined


   .. py:attribute:: role

      The service Role of this Deployment Group. If you don't provide one, a new Role will be created.


      :type: :py:class:`@aws-cdk/aws-iam.Role` or undefined


ServerDeploymentGroupRef
^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: ServerDeploymentGroupRef(parent, id)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CodeDeploy;

      .. code-tab:: java

         import software.amazon.awscdk.services.codedeploy.ServerDeploymentGroupRef;

      .. code-tab:: javascript

         const { ServerDeploymentGroupRef } = require('@aws-cdk/aws-codedeploy');

      .. code-tab:: typescript

         import { ServerDeploymentGroupRef } from '@aws-cdk/aws-codedeploy';



   Represents a reference to a CodeDeploy EC2/on-premise Deployment Group.  If you're managing the Deployment Group alongside the rest of your CDK resources, use the {@link ServerDeploymentGroup} class.  If you want to reference an already existing Deployment Group, or one defined in a different CDK Stack, use the {@link #import} method.


   :extends: :py:class:`@aws-cdk/cdk.Construct`
   :abstract: Yes
   :param parent: The parent construct
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param id: 
   :type id: string

   .. py:staticmethod:: import(parent, id, props) -> @aws-cdk/aws-codedeploy.ServerDeploymentGroupRef

      Import an EC2/on-premise Deployment Group defined either outside the CDK, or in a different CDK Stack and exported using the {@link #export} method.


      :param parent: the parent Construct for this new Construct
      :type parent: :py:class:`@aws-cdk/cdk.Construct`
      :param id: the logical ID of this new Construct
      :type id: string
      :param props: the properties of the referenced Deployment Group
      :type props: :py:class:`~@aws-cdk/aws-codedeploy.ServerDeploymentGroupRefProps`
      :return: a Construct representing a reference to an existing Deployment Group
      :rtype: :py:class:`~@aws-cdk/aws-codedeploy.ServerDeploymentGroupRef`


   .. py:method:: export() -> @aws-cdk/aws-codedeploy.ServerDeploymentGroupRefProps

      :rtype: :py:class:`~@aws-cdk/aws-codedeploy.ServerDeploymentGroupRefProps`


   .. py:attribute:: application

      :type: :py:class:`~@aws-cdk/aws-codedeploy.ServerApplicationRef` *(readonly)* *(abstract)*


   .. py:attribute:: deploymentGroupArn

      :type: :py:class:`~@aws-cdk/aws-codedeploy.DeploymentGroupArn` *(readonly)* *(abstract)*


   .. py:attribute:: deploymentGroupName

      :type: :py:class:`~@aws-cdk/aws-codedeploy.DeploymentGroupName` *(readonly)* *(abstract)*


ServerDeploymentGroupRefProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: ServerDeploymentGroupRefProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CodeDeploy;

      .. code-tab:: java

         import software.amazon.awscdk.services.codedeploy.ServerDeploymentGroupRefProps;

      .. code-tab:: javascript

         // ServerDeploymentGroupRefProps is an interface

      .. code-tab:: typescript

         import { ServerDeploymentGroupRefProps } from '@aws-cdk/aws-codedeploy';



   Properties of a reference to a CodeDeploy EC2/on-premise Deployment Group.




   .. py:attribute:: application

      The reference to the CodeDeploy EC2/on-premise Application that this Deployment Group belongs to.


      :type: :py:class:`~@aws-cdk/aws-codedeploy.ServerApplicationRef`


   .. py:attribute:: deploymentGroupName

      The physical, human-readable name of the CodeDeploy EC2/on-premise Deployment Group that we are referencing.


      :type: :py:class:`~@aws-cdk/aws-codedeploy.DeploymentGroupName`



cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-codedeploy.cloudformation

ApplicationResource
~~~~~~~~~~~~~~~~~~~

.. py:class:: ApplicationResource(parent, name, [properties])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CodeDeploy;

      .. code-tab:: java

         import software.amazon.awscdk.services.codedeploy.cloudformation.ApplicationResource;

      .. code-tab:: javascript

         const { cloudformation.ApplicationResource } = require('@aws-cdk/aws-codedeploy');

      .. code-tab:: typescript

         import { cloudformation.ApplicationResource } from '@aws-cdk/aws-codedeploy';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ApplicationResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ApplicationResource``
   :type properties: :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.ApplicationResourceProps` or undefined

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-codedeploy.ApplicationName` *(readonly)*


ApplicationResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ApplicationResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CodeDeploy;

      .. code-tab:: java

         import software.amazon.awscdk.services.codedeploy.cloudformation.ApplicationResourceProps;

      .. code-tab:: javascript

         // cloudformation.ApplicationResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ApplicationResourceProps } from '@aws-cdk/aws-codedeploy';





   .. py:attribute:: applicationName

      ``AWS::CodeDeploy::Application.ApplicationName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-application.html#cfn-codedeploy-application-applicationname


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: computePlatform

      ``AWS::CodeDeploy::Application.ComputePlatform``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-application.html#cfn-codedeploy-application-computeplatform


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


DeploymentConfigResource
~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: DeploymentConfigResource(parent, name, [properties])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CodeDeploy;

      .. code-tab:: java

         import software.amazon.awscdk.services.codedeploy.cloudformation.DeploymentConfigResource;

      .. code-tab:: javascript

         const { cloudformation.DeploymentConfigResource } = require('@aws-cdk/aws-codedeploy');

      .. code-tab:: typescript

         import { cloudformation.DeploymentConfigResource } from '@aws-cdk/aws-codedeploy';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``DeploymentConfigResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``DeploymentConfigResource``
   :type properties: :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentConfigResourceProps` or undefined

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-codedeploy.DeploymentConfigId` *(readonly)*

   .. py:class:: MinimumHealthyHostsProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.CodeDeploy;

         .. code-tab:: java

            import software.amazon.awscdk.services.codedeploy.cloudformation.DeploymentConfigResource.MinimumHealthyHostsProperty;

         .. code-tab:: javascript

            // cloudformation.DeploymentConfigResource.MinimumHealthyHostsProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.DeploymentConfigResource.MinimumHealthyHostsProperty } from '@aws-cdk/aws-codedeploy';





      .. py:attribute:: type

         ``DeploymentConfigResource.MinimumHealthyHostsProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentconfig-minimumhealthyhosts.html#cfn-codedeploy-deploymentconfig-minimumhealthyhosts-type


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: value

         ``DeploymentConfigResource.MinimumHealthyHostsProperty.Value``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentconfig-minimumhealthyhosts.html#cfn-codedeploy-deploymentconfig-minimumhealthyhosts-value


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken`



DeploymentConfigResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: DeploymentConfigResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CodeDeploy;

      .. code-tab:: java

         import software.amazon.awscdk.services.codedeploy.cloudformation.DeploymentConfigResourceProps;

      .. code-tab:: javascript

         // cloudformation.DeploymentConfigResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.DeploymentConfigResourceProps } from '@aws-cdk/aws-codedeploy';





   .. py:attribute:: deploymentConfigName

      ``AWS::CodeDeploy::DeploymentConfig.DeploymentConfigName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentconfig.html#cfn-codedeploy-deploymentconfig-deploymentconfigname


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: minimumHealthyHosts

      ``AWS::CodeDeploy::DeploymentConfig.MinimumHealthyHosts``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentconfig.html#cfn-codedeploy-deploymentconfig-minimumhealthyhosts


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentConfigResource.MinimumHealthyHostsProperty` or undefined


DeploymentGroupResource
~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: DeploymentGroupResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CodeDeploy;

      .. code-tab:: java

         import software.amazon.awscdk.services.codedeploy.cloudformation.DeploymentGroupResource;

      .. code-tab:: javascript

         const { cloudformation.DeploymentGroupResource } = require('@aws-cdk/aws-codedeploy');

      .. code-tab:: typescript

         import { cloudformation.DeploymentGroupResource } from '@aws-cdk/aws-codedeploy';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``DeploymentGroupResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``DeploymentGroupResource``
   :type properties: :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-codedeploy.DeploymentGroupName` *(readonly)*

   .. py:class:: AlarmConfigurationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.CodeDeploy;

         .. code-tab:: java

            import software.amazon.awscdk.services.codedeploy.cloudformation.DeploymentGroupResource.AlarmConfigurationProperty;

         .. code-tab:: javascript

            // cloudformation.DeploymentGroupResource.AlarmConfigurationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.DeploymentGroupResource.AlarmConfigurationProperty } from '@aws-cdk/aws-codedeploy';





      .. py:attribute:: alarms

         ``DeploymentGroupResource.AlarmConfigurationProperty.Alarms``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-alarmconfiguration.html#cfn-codedeploy-deploymentgroup-alarmconfiguration-alarms


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResource.AlarmProperty`)[] or undefined


      .. py:attribute:: enabled

         ``DeploymentGroupResource.AlarmConfigurationProperty.Enabled``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-alarmconfiguration.html#cfn-codedeploy-deploymentgroup-alarmconfiguration-enabled


         :type: boolean or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: ignorePollAlarmFailure

         ``DeploymentGroupResource.AlarmConfigurationProperty.IgnorePollAlarmFailure``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-alarmconfiguration.html#cfn-codedeploy-deploymentgroup-alarmconfiguration-ignorepollalarmfailure


         :type: boolean or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: AlarmProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.CodeDeploy;

         .. code-tab:: java

            import software.amazon.awscdk.services.codedeploy.cloudformation.DeploymentGroupResource.AlarmProperty;

         .. code-tab:: javascript

            // cloudformation.DeploymentGroupResource.AlarmProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.DeploymentGroupResource.AlarmProperty } from '@aws-cdk/aws-codedeploy';





      .. py:attribute:: name

         ``DeploymentGroupResource.AlarmProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-alarm.html#cfn-codedeploy-deploymentgroup-alarm-name


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: AutoRollbackConfigurationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.CodeDeploy;

         .. code-tab:: java

            import software.amazon.awscdk.services.codedeploy.cloudformation.DeploymentGroupResource.AutoRollbackConfigurationProperty;

         .. code-tab:: javascript

            // cloudformation.DeploymentGroupResource.AutoRollbackConfigurationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.DeploymentGroupResource.AutoRollbackConfigurationProperty } from '@aws-cdk/aws-codedeploy';





      .. py:attribute:: enabled

         ``DeploymentGroupResource.AutoRollbackConfigurationProperty.Enabled``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-autorollbackconfiguration.html#cfn-codedeploy-deploymentgroup-autorollbackconfiguration-enabled


         :type: boolean or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: events

         ``DeploymentGroupResource.AutoRollbackConfigurationProperty.Events``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-autorollbackconfiguration.html#cfn-codedeploy-deploymentgroup-autorollbackconfiguration-events


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


   .. py:class:: DeploymentProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.CodeDeploy;

         .. code-tab:: java

            import software.amazon.awscdk.services.codedeploy.cloudformation.DeploymentGroupResource.DeploymentProperty;

         .. code-tab:: javascript

            // cloudformation.DeploymentGroupResource.DeploymentProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.DeploymentGroupResource.DeploymentProperty } from '@aws-cdk/aws-codedeploy';





      .. py:attribute:: revision

         ``DeploymentGroupResource.DeploymentProperty.Revision``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deployment.html#cfn-properties-codedeploy-deploymentgroup-deployment-revision


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResource.RevisionLocationProperty`


      .. py:attribute:: description

         ``DeploymentGroupResource.DeploymentProperty.Description``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deployment.html#cfn-properties-codedeploy-deploymentgroup-deployment-description


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: ignoreApplicationStopFailures

         ``DeploymentGroupResource.DeploymentProperty.IgnoreApplicationStopFailures``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deployment.html#cfn-properties-codedeploy-deploymentgroup-deployment-ignoreapplicationstopfailures


         :type: boolean or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: DeploymentStyleProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.CodeDeploy;

         .. code-tab:: java

            import software.amazon.awscdk.services.codedeploy.cloudformation.DeploymentGroupResource.DeploymentStyleProperty;

         .. code-tab:: javascript

            // cloudformation.DeploymentGroupResource.DeploymentStyleProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.DeploymentGroupResource.DeploymentStyleProperty } from '@aws-cdk/aws-codedeploy';





      .. py:attribute:: deploymentOption

         ``DeploymentGroupResource.DeploymentStyleProperty.DeploymentOption``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deploymentstyle.html#cfn-codedeploy-deploymentgroup-deploymentstyle-deploymentoption


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: deploymentType

         ``DeploymentGroupResource.DeploymentStyleProperty.DeploymentType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deploymentstyle.html#cfn-codedeploy-deploymentgroup-deploymentstyle-deploymenttype


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: EC2TagFilterProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.CodeDeploy;

         .. code-tab:: java

            import software.amazon.awscdk.services.codedeploy.cloudformation.DeploymentGroupResource.EC2TagFilterProperty;

         .. code-tab:: javascript

            // cloudformation.DeploymentGroupResource.EC2TagFilterProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.DeploymentGroupResource.EC2TagFilterProperty } from '@aws-cdk/aws-codedeploy';





      .. py:attribute:: key

         ``DeploymentGroupResource.EC2TagFilterProperty.Key``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-ec2tagfilters.html#cfn-properties-codedeploy-deploymentgroup-ec2tagfilters-key


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: type

         ``DeploymentGroupResource.EC2TagFilterProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-ec2tagfilters.html#cfn-properties-codedeploy-deploymentgroup-ec2tagfilters-type


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: value

         ``DeploymentGroupResource.EC2TagFilterProperty.Value``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-ec2tagfilters.html#cfn-properties-codedeploy-deploymentgroup-ec2tagfilters-value


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: ELBInfoProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.CodeDeploy;

         .. code-tab:: java

            import software.amazon.awscdk.services.codedeploy.cloudformation.DeploymentGroupResource.ELBInfoProperty;

         .. code-tab:: javascript

            // cloudformation.DeploymentGroupResource.ELBInfoProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.DeploymentGroupResource.ELBInfoProperty } from '@aws-cdk/aws-codedeploy';





      .. py:attribute:: name

         ``DeploymentGroupResource.ELBInfoProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-elbinfo.html#cfn-codedeploy-deploymentgroup-elbinfo-name


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: GitHubLocationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.CodeDeploy;

         .. code-tab:: java

            import software.amazon.awscdk.services.codedeploy.cloudformation.DeploymentGroupResource.GitHubLocationProperty;

         .. code-tab:: javascript

            // cloudformation.DeploymentGroupResource.GitHubLocationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.DeploymentGroupResource.GitHubLocationProperty } from '@aws-cdk/aws-codedeploy';





      .. py:attribute:: commitId

         ``DeploymentGroupResource.GitHubLocationProperty.CommitId``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deployment-revision-githublocation.html#cfn-properties-codedeploy-deploymentgroup-deployment-revision-githublocation-commitid


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: repository

         ``DeploymentGroupResource.GitHubLocationProperty.Repository``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deployment-revision-githublocation.html#cfn-properties-codedeploy-deploymentgroup-deployment-revision-githublocation-repository


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:class:: LoadBalancerInfoProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.CodeDeploy;

         .. code-tab:: java

            import software.amazon.awscdk.services.codedeploy.cloudformation.DeploymentGroupResource.LoadBalancerInfoProperty;

         .. code-tab:: javascript

            // cloudformation.DeploymentGroupResource.LoadBalancerInfoProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.DeploymentGroupResource.LoadBalancerInfoProperty } from '@aws-cdk/aws-codedeploy';





      .. py:attribute:: elbInfoList

         ``DeploymentGroupResource.LoadBalancerInfoProperty.ElbInfoList``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-loadbalancerinfo.html#cfn-codedeploy-deploymentgroup-loadbalancerinfo-elbinfolist


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResource.ELBInfoProperty`)[] or undefined


      .. py:attribute:: targetGroupInfoList

         ``DeploymentGroupResource.LoadBalancerInfoProperty.TargetGroupInfoList``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-loadbalancerinfo.html#cfn-codedeploy-deploymentgroup-loadbalancerinfo-targetgroupinfolist


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResource.TargetGroupInfoProperty`)[] or undefined


   .. py:class:: RevisionLocationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.CodeDeploy;

         .. code-tab:: java

            import software.amazon.awscdk.services.codedeploy.cloudformation.DeploymentGroupResource.RevisionLocationProperty;

         .. code-tab:: javascript

            // cloudformation.DeploymentGroupResource.RevisionLocationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.DeploymentGroupResource.RevisionLocationProperty } from '@aws-cdk/aws-codedeploy';





      .. py:attribute:: gitHubLocation

         ``DeploymentGroupResource.RevisionLocationProperty.GitHubLocation``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deployment-revision.html#cfn-properties-codedeploy-deploymentgroup-deployment-revision-githublocation


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResource.GitHubLocationProperty` or undefined


      .. py:attribute:: revisionType

         ``DeploymentGroupResource.RevisionLocationProperty.RevisionType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deployment-revision.html#cfn-properties-codedeploy-deploymentgroup-deployment-revision-revisiontype


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: s3Location

         ``DeploymentGroupResource.RevisionLocationProperty.S3Location``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deployment-revision.html#cfn-properties-codedeploy-deploymentgroup-deployment-revision-s3location


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResource.S3LocationProperty` or undefined


   .. py:class:: S3LocationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.CodeDeploy;

         .. code-tab:: java

            import software.amazon.awscdk.services.codedeploy.cloudformation.DeploymentGroupResource.S3LocationProperty;

         .. code-tab:: javascript

            // cloudformation.DeploymentGroupResource.S3LocationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.DeploymentGroupResource.S3LocationProperty } from '@aws-cdk/aws-codedeploy';





      .. py:attribute:: bucket

         ``DeploymentGroupResource.S3LocationProperty.Bucket``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deployment-revision-s3location.html#cfn-properties-codedeploy-deploymentgroup-deployment-revision-s3location-bucket


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: key

         ``DeploymentGroupResource.S3LocationProperty.Key``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deployment-revision-s3location.html#cfn-properties-codedeploy-deploymentgroup-deployment-revision-s3location-key


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: bundleType

         ``DeploymentGroupResource.S3LocationProperty.BundleType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deployment-revision-s3location.html#cfn-properties-codedeploy-deploymentgroup-deployment-revision-s3location-bundletype


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: eTag

         ``DeploymentGroupResource.S3LocationProperty.ETag``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deployment-revision-s3location.html#cfn-properties-codedeploy-deploymentgroup-deployment-revision-s3location-etag


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: version

         ``DeploymentGroupResource.S3LocationProperty.Version``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-deployment-revision-s3location.html#cfn-properties-codedeploy-deploymentgroup-deployment-revision-s3location-value


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: TagFilterProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.CodeDeploy;

         .. code-tab:: java

            import software.amazon.awscdk.services.codedeploy.cloudformation.DeploymentGroupResource.TagFilterProperty;

         .. code-tab:: javascript

            // cloudformation.DeploymentGroupResource.TagFilterProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.DeploymentGroupResource.TagFilterProperty } from '@aws-cdk/aws-codedeploy';





      .. py:attribute:: key

         ``DeploymentGroupResource.TagFilterProperty.Key``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-onpremisesinstancetagfilters.html#cfn-properties-codedeploy-deploymentgroup-onpremisesinstancetagfilters-key


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: type

         ``DeploymentGroupResource.TagFilterProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-onpremisesinstancetagfilters.html#cfn-properties-codedeploy-deploymentgroup-onpremisesinstancetagfilters-type


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: value

         ``DeploymentGroupResource.TagFilterProperty.Value``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-onpremisesinstancetagfilters.html#cfn-properties-codedeploy-deploymentgroup-onpremisesinstancetagfilters-value


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: TargetGroupInfoProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.CodeDeploy;

         .. code-tab:: java

            import software.amazon.awscdk.services.codedeploy.cloudformation.DeploymentGroupResource.TargetGroupInfoProperty;

         .. code-tab:: javascript

            // cloudformation.DeploymentGroupResource.TargetGroupInfoProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.DeploymentGroupResource.TargetGroupInfoProperty } from '@aws-cdk/aws-codedeploy';





      .. py:attribute:: name

         ``DeploymentGroupResource.TargetGroupInfoProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-targetgroupinfo.html#cfn-codedeploy-deploymentgroup-targetgroupinfo-name


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: TriggerConfigProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.CodeDeploy;

         .. code-tab:: java

            import software.amazon.awscdk.services.codedeploy.cloudformation.DeploymentGroupResource.TriggerConfigProperty;

         .. code-tab:: javascript

            // cloudformation.DeploymentGroupResource.TriggerConfigProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.DeploymentGroupResource.TriggerConfigProperty } from '@aws-cdk/aws-codedeploy';





      .. py:attribute:: triggerEvents

         ``DeploymentGroupResource.TriggerConfigProperty.TriggerEvents``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-triggerconfig.html#cfn-codedeploy-deploymentgroup-triggerconfig-triggerevents


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


      .. py:attribute:: triggerName

         ``DeploymentGroupResource.TriggerConfigProperty.TriggerName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-triggerconfig.html#cfn-codedeploy-deploymentgroup-triggerconfig-triggername


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: triggerTargetArn

         ``DeploymentGroupResource.TriggerConfigProperty.TriggerTargetArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-codedeploy-deploymentgroup-triggerconfig.html#cfn-codedeploy-deploymentgroup-triggerconfig-triggertargetarn


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined



DeploymentGroupResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: DeploymentGroupResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CodeDeploy;

      .. code-tab:: java

         import software.amazon.awscdk.services.codedeploy.cloudformation.DeploymentGroupResourceProps;

      .. code-tab:: javascript

         // cloudformation.DeploymentGroupResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.DeploymentGroupResourceProps } from '@aws-cdk/aws-codedeploy';





   .. py:attribute:: applicationName

      ``AWS::CodeDeploy::DeploymentGroup.ApplicationName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentgroup.html#cfn-codedeploy-deploymentgroup-applicationname


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: serviceRoleArn

      ``AWS::CodeDeploy::DeploymentGroup.ServiceRoleArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentgroup.html#cfn-codedeploy-deploymentgroup-servicerolearn


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: alarmConfiguration

      ``AWS::CodeDeploy::DeploymentGroup.AlarmConfiguration``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentgroup.html#cfn-codedeploy-deploymentgroup-alarmconfiguration


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResource.AlarmConfigurationProperty` or undefined


   .. py:attribute:: autoRollbackConfiguration

      ``AWS::CodeDeploy::DeploymentGroup.AutoRollbackConfiguration``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentgroup.html#cfn-codedeploy-deploymentgroup-autorollbackconfiguration


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResource.AutoRollbackConfigurationProperty` or undefined


   .. py:attribute:: autoScalingGroups

      ``AWS::CodeDeploy::DeploymentGroup.AutoScalingGroups``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentgroup.html#cfn-codedeploy-deploymentgroup-autoscalinggroups


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


   .. py:attribute:: deployment

      ``AWS::CodeDeploy::DeploymentGroup.Deployment``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentgroup.html#cfn-codedeploy-deploymentgroup-deployment


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResource.DeploymentProperty` or undefined


   .. py:attribute:: deploymentConfigName

      ``AWS::CodeDeploy::DeploymentGroup.DeploymentConfigName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentgroup.html#cfn-codedeploy-deploymentgroup-deploymentconfigname


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: deploymentGroupName

      ``AWS::CodeDeploy::DeploymentGroup.DeploymentGroupName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentgroup.html#cfn-codedeploy-deploymentgroup-deploymentgroupname


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: deploymentStyle

      ``AWS::CodeDeploy::DeploymentGroup.DeploymentStyle``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentgroup.html#cfn-codedeploy-deploymentgroup-deploymentstyle


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResource.DeploymentStyleProperty` or undefined


   .. py:attribute:: ec2TagFilters

      ``AWS::CodeDeploy::DeploymentGroup.Ec2TagFilters``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentgroup.html#cfn-codedeploy-deploymentgroup-ec2tagfilters


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResource.EC2TagFilterProperty`)[] or undefined


   .. py:attribute:: loadBalancerInfo

      ``AWS::CodeDeploy::DeploymentGroup.LoadBalancerInfo``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentgroup.html#cfn-codedeploy-deploymentgroup-loadbalancerinfo


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResource.LoadBalancerInfoProperty` or undefined


   .. py:attribute:: onPremisesInstanceTagFilters

      ``AWS::CodeDeploy::DeploymentGroup.OnPremisesInstanceTagFilters``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentgroup.html#cfn-codedeploy-deploymentgroup-onpremisesinstancetagfilters


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResource.TagFilterProperty`)[] or undefined


   .. py:attribute:: triggerConfigurations

      ``AWS::CodeDeploy::DeploymentGroup.TriggerConfigurations``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-codedeploy-deploymentgroup.html#cfn-codedeploy-deploymentgroup-triggerconfigurations


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-codedeploy.cloudformation.DeploymentGroupResource.TriggerConfigProperty`)[] or undefined



.. py:currentmodule:: @aws-cdk/aws-codedeploy

